--- a/测试.md
+++ b/测试.md
@@ -1,105 +1,84 @@
-| **泰语**                           | **英语**                              |
-|------------------------------------|--------------------------------------|
-| ตัวเลข                             | Number, digit                        |
-| วิธี                               | Method, way                          |
-| ดังนี้                             | As follows                           |
-| หน่วย                             | Unit                                 |
-| สิบ                                | Ten                                  |
-| ร้อย                               | Hundred                              |
-| พัน                                | Thousand                             |
-| หมื่น                              | Ten thousand                         |
-| แสน                               | Hundred thousand                     |
-| ล้าน                               | Million                              |
-| เอ็ด                               | One (used in 21, 31, etc.)          |
-| เศษส่วน                            | Fraction                             |
-| เศษส่วนทศนิยม                      | Decimal fraction                     |
-| ศูนย์                              | Zero                                 |
-| จุด                                | Point, dot, decimal point           |
-| ร้อยละ                             | Percentage                           |
-| ร้อยละห้า                          | Five percent (5%)                    |
-| ห้าร้อยละ                          | Five hundred percent (500%)         |
-| เปอร์เซ็นต์                        | Percent (%)                          |
-| คณะ                               | Faculty, department, committee      |
-| คณะกรรมการ                         | Committee                            |
-| คณะผู้แทน                          | Delegation, representatives         |
-| เอเชีย / เอเซีย                    | Asia                                 |
-| แอฟริกา                            | Africa                               |
-| กัมพูชา                            | Cambodia                             |
-| เวียดนาม                           | Vietnam                              |
-| มาเลเซีย                           | Malaysia                             |
-| อินโดนีเซีย / อินโดเนเซีย           | Indonesia                            |
-| ภาษาสิงหล                          | Sinhala language                     |
-| ภาษาสวาฮีลี                        | Swahili language                     |
-| ภาษาฮาวซา                          | Hausa language                       |
-| ตุรกี                              | Turkey                               |
-| รวม                                | Include, total                       |
-| ทั้ง                                | Both, entire                         |
-| ทั้งหมด                            | All, total                           |
-| เท่าไร                             | How much, how many                   |
-| แบ่ง                               | Divide                               |
-| แบ่งออกเป็น                        | Divided into                         |
-| วิทยาลัย                           | College                              |
-| อาหรับ                             | Arabic                               |
-| ยุโรป                              | Europe                               |
-| คณะภาษายุโรปตะวันออก               | Faculty of Eastern European Languages |
-| วิทยาลัยภาษาอังกฤษ                  | College of English Language          |
-| วิทยาลัยภาษารัสเซีย                 | College of Russian Language          |
-| วัฒนธรรม                           | Culture                              |
-| วัฒนธรรมจีน                        | Chinese culture                      |
-| วิทยาลัยภาษาและวัฒนธรรมจีน          | College of Chinese Language and Culture |
-| การค้า                             | Trade, commerce                      |
-| ระหว่าง                            | Between                              |
-| การค้าระหว่างประเทศ                | International trade                  |
-| วิทยาลัยการค้าระหว่างประเทศ        | College of International Trade       |
-| ชั้นสูง                             | Advanced, higher                     |
-| การแปล                             | Translation                          |
-| วิทยาลัยการแปลชั้นสูง              | College of Advanced Translation      |
-| วิทยาลัยออนไลน์                     | Online college                       |
-| ประมาณ                             | Approximately                        |
-| กว่า                               | More than, over                      |
-| ชาว                               | People of (nationality, ethnicity)   |
-| ต่างประเทศ                         | Foreign, abroad                      |
-| ถ้า                                | If                                   |
-| รวมทั้ง                             | Including                            |
-| เจ้าหน้าที่                         | Official, staff                      |
-| อื่นๆ                               | Others                               |
-| คง                                | Probably, likely                     |
-| อยาก                              | Want, wish                           |
-| สถา                               | Institution, place (abbreviation)    |
-| สถานี                             | Station                              |
-| สถาบัน                            | Institute                            |
-| การศึกษา                          | Education                            |
-| สถาบันการศึกษา                    | Educational institution              |
-| อุดม                              | Supreme, abundant                    |
-| อุดมศึกษา                         | Higher education                     |
-| สถาบันอุดมศึกษา                   | Higher education institution         |
-| แห่ง                              | Place, location, classifier for institutions |
-| แน่นอน                            | Certainly, definitely                |
-| เท่าที่                            | As much as, as far as                |
-| ซี                                | C (Latin letter)                     |
-| เช่นนั้น                           | Like that, in such a way             |
-| เฉพาะ...ก็...                      | Only...also...                       |
-| ผู้                                | Person, classifier for people        |
-| ผู้จัดการ                          | Manager                              |
-| สมัคร                              | Apply, register                      |
-| ใบสมัคร                            | Application form                     |
-| สอบ                               | Exam, test                           |
-| สอบข้อเขียน                        | Written exam                         |
-| สอบข้อฟัง                          | Listening exam                        |
-| สอบเข้าได้                          | Pass an entrance exam                |
-| สมัครสอบเข้ามหาวิทยาลัย            | Apply for a university entrance exam |
-| ขั้นบันได                          | Staircase, stairs                     |
-| ไฟล์                              | File (digital or document)           |
-| ล็อบบี้                            | Lobby                                |
-| พลัง                              | Power, energy                        |
-| ข้อมูล                             | Information, data                    |
-| ไว้ใจ                             | Trust                                |
-| นาน                               | Long (time duration)                 |
-| นาน ๆ                             | Occasionally, from time to time      |
-| นิด                               | A little, slightly                   |
-| นิดๆ หน่อยๆ                        | A little bit, slightly               |
-| การเงิน                            | Finance                              |
-| การทหาร                           | Military affairs                     |
-| การต่างประเทศ                      | Foreign affairs                      |
-| ความลับ                           | Secret, confidentiality              |
-| แฮมเบอร์เกอร์                      | Hamburger                            |
+| **泰语**                    | **英语**                        |
+|-----------------------------|--------------------------------|
+| แนะนำ                        | Recommend, suggest            |
+| แนะนำว่า                     | Suggest that, recommend that  |
+| รู้จัก                       | Know, be acquainted with      |
+| แนะนำ...ให้รู้จัก             | Introduce (someone) to (someone) |
+| ลูก                          | Child, son, daughter         |
+| ยินดี                        | Glad, pleased                 |
+| หล่อ                        | Handsome                      |
+| มาก                         | Very, a lot                   |
+| โอกาส                       | Opportunity, chance           |
+| ดิฉัน                        | I (formal, female speaker)    |
+| เช่นเดียวกัน                 | Likewise, same here           |
+| เดียว                        | Single, only, one             |
+| ธุระ                         | Errand, business              |
+| บังเอิญ                      | Coincidentally, by chance     |
+| ผ่าน                        | Pass, go through              |
+| ทาง                         | Way, route, direction         |
+| ถนน                         | Road, street                  |
+| เลย                         | Completely, totally, beyond   |
+| แวะ                         | Stop by, drop in              |
+| พา                          | Take (someone somewhere)      |
+| เพื่อน                       | Friend                        |
+| เที่ยว                       | Travel, go out, tour          |
+| เล่น                         | Play                          |
+| ดีใจ                         | Happy, glad                   |
+| พวกเธอ                      | You all (female group)        |
+| เธอ                         | You, she (informal)           |
+| ขอให้                        | Wish, hope for                |
+| ทำตัว                        | Behave, act                   |
+| ทำตัวให้สบาย                 | Make yourself comfortable     |
+| เหมือน                       | Like, similar to              |
+| จำ                          | Remember                      |
+| เคย                         | Used to, have ever            |
+| หน                          | Time, occasion                |
+| สบายดี                      | Feeling good, well            |
+| รู้สึก                       | Feel                         |
+| สมบูรณ์                     | Complete, perfect             |
+| แข็งแรง                     | Strong, healthy               |
+| เพื่อนร่วมชั้น               | Classmate                     |
+| นั่ง                         | Sit                           |
+| ดื่ม                         | Drink                         |
+| ชา                          | Tea                           |
+| ร้อน                        | Hot                           |
+| เย็น                        | Cold                          |
+| เย็นสบาย                    | Cool and comfortable          |
+| ใจเย็นๆ                      | Calm down, take it easy       |
+| ว่า                          | That, say                     |
+| ลำบาก                       | Difficult, troublesome        |
+| คุย                         | Chat, talk                    |
+| เกรง                         | Be afraid, fear               |
+| เกรงใจ                      | Considerate, feel uneasy (politeness) |
+| สนิท                        | Close, intimate (relationship) |
+| หวัง                         | Hope, expect                  |
+| เพื่อนที่ดี                   | Good friend                   |
+| ต่อไป                        | Next, from now on            |
+| การฟัง                       | Listening                     |
+| การพูด                       | Speaking                      |
+| การเขียน                     | Writing                       |
+| การค้าระหว่างประเทศ         | International trade           |
+| การแปล                      | Translation                   |
+| การทหาร                     | Military affairs              |
+| การต่างประเทศ               | Foreign affairs               |
+| ความสวย                     | Beauty                        |
+| ความจริง                    | Truth                         |
+| ความดี                       | Goodness                      |
+| ความสูง                     | Height                        |
+| ความเร็ว                    | Speed                         |
+| ความเห็น                    | Opinion                       |
+| ความคิด                     | Thought, idea                 |
+| ความรู้                      | Knowledge                     |
+| กว่า                        | More than, comparative        |
+| คุณสวยกว่าเขา               | You are more beautiful than her |
+| อ้วน                        | Fat, chubby                   |
+| ผอม                        | Thin, slim                    |
+| ผ้า                         | Cloth, fabric                 |
+| ผืน                         | Piece (classifier for cloth, fabric) |
+| กระดาษ                      | Paper                         |
+| หนัก                        | Heavy                         |
+| ฝนตกหนัก                    | Heavy rain                    |
+| เป็นเกียรติ                  | An honor, honored             |
+| ตรงเวลา                     | Punctual, on time             |
+| เร็วๆ                        | Quickly, soon                 |
+| ตอบจดหมาย                  | Reply to a letter             |
