--- a/基础泰语 第一册 第11课 扩展词汇.md
+++ b/基础泰语 第一册 第11课 扩展词汇.md
@@ -134,6 +134,12 @@ He is taller than me	-	เขาสูงกว่าฉัน	-	เขาสู
 
 He has been learning Thai for less than 100 days	-	เขาเรียนภาษาไทยใช้เวลาน้อยกว่า 100 วันแล้ว	-	เขาเรียนภาษาไทยใช้เวลาน้อยกว่า 100 วันแล้ว	-	เขาเรียนภาษาไทยใช้เวลาน้อยกว่า 100 วันแล้ว	-	เขาเรียนภาษาไทยใช้เวลาน้อยกว่า 100 วันแล้ว	-	เขาเรียนภาษาไทยใช้เวลาน้อยกว่า 100 วันแล้ว	-	เขาเรียนภาษาไทยใช้เวลาน้อยกว่า 100 วันแล้ว	-	เขาเรียนภาษาไทยใช้เวลาน้อยกว่า 100 วันแล้ว	-	He has been learning Thai for less than 100 days
 
+minute - นาท - นาท - นาท - นาท - นาท - นาท - นาท - นาท - นาท - นาท - minute
+
+less than - น้อยกว่า - น้อยกว่า - น้อยกว่า - น้อยกว่า - น้อยกว่า - น้อยกว่า - น้อยกว่า - น้อยกว่า - น้อยกว่า - น้อยกว่า - น้อยกว่า - less than
+
+more than - เกินกว่า - เกินกว่า - เกินกว่า - เกินกว่า - เกินกว่า - เกินกว่า - เกินกว่า - เกินกว่า - เกินกว่า - เกินกว่า - more than
+
 I have been waiting for more than 10 minutes	-	รอมาเกินกว่า 10 นาทีแล้ว	-	รอมาเกินกว่า 10 นาทีแล้ว	-	รอมาเกินกว่า 10 นาทีแล้ว	-	รอมาเกินกว่า 10 นาทีแล้ว	-	รอมาเกินกว่า 10 นาทีแล้ว	-	รอมาเกินกว่า 10 นาทีแล้ว	-	รอมาเกินกว่า 10 นาทีแล้ว	-	I have been waiting for more than 10 minutes
 
 Chinese people speak Chinese	-	ชาวจีนพูดภาษาจีน	-	ชาวจีนพูดภาษาจีน	-	ชาวจีนพูดภาษาจีน	-	ชาวจีนพูดภาษาจีน	-	ชาวจีนพูดภาษาจีน	-	ชาวจีนพูดภาษาจีน	-	ชาวจีนพูดภาษาจีน	-	Chinese people speak Chinese
