Update 基础泰语 第一册 第11课 扩展词汇.md

--- a/基础泰语 第一册 第11课 扩展词汇.md
+++ b/基础泰语 第一册 第11课 扩展词汇.md
@@ -134,7 +134,7 @@ He is taller than me	-	เขาสูงกว่าฉัน	-	เขาสู
 
 He has been learning Thai for less than 100 days	-	เขาเรียนภาษาไทยใช้เวลาน้อยกว่า 100 วันแล้ว	-	เขาเรียนภาษาไทยใช้เวลาน้อยกว่า 100 วันแล้ว	-	เขาเรียนภาษาไทยใช้เวลาน้อยกว่า 100 วันแล้ว	-	เขาเรียนภาษาไทยใช้เวลาน้อยกว่า 100 วันแล้ว	-	เขาเรียนภาษาไทยใช้เวลาน้อยกว่า 100 วันแล้ว	-	เขาเรียนภาษาไทยใช้เวลาน้อยกว่า 100 วันแล้ว	-	เขาเรียนภาษาไทยใช้เวลาน้อยกว่า 100 วันแล้ว	-	He has been learning Thai for less than 100 days
 
-minute - นาท - นาท - นาท - นาท - นาท - นาท - นาท - นาท - นาท - นาท - minute
+minute - นาที - นาที -นาที - นาที - นาที - นาที - นาที - นาที - นาที - นาที - minute
 
 less than - น้อยกว่า - น้อยกว่า - น้อยกว่า - น้อยกว่า - น้อยกว่า - น้อยกว่า - น้อยกว่า - น้อยกว่า - น้อยกว่า - น้อยกว่า - น้อยกว่า - less than
 
