--- a/测试.md
+++ b/测试.md
@@ -1,84 +1,50 @@
-| **泰语**                    | **英语**                        |
-|-----------------------------|--------------------------------|
-| แนะนำ                        | Recommend, suggest            |
-| แนะนำว่า                     | Suggest that, recommend that  |
-| รู้จัก                       | Know, be acquainted with      |
-| แนะนำ...ให้รู้จัก             | Introduce (someone) to (someone) |
-| ลูก                          | Child, son, daughter         |
-| ยินดี                        | Glad, pleased                 |
-| หล่อ                        | Handsome                      |
-| มาก                         | Very, a lot                   |
-| โอกาส                       | Opportunity, chance           |
-| ดิฉัน                        | I (formal, female speaker)    |
-| เช่นเดียวกัน                 | Likewise, same here           |
-| เดียว                        | Single, only, one             |
-| ธุระ                         | Errand, business              |
-| บังเอิญ                      | Coincidentally, by chance     |
-| ผ่าน                        | Pass, go through              |
-| ทาง                         | Way, route, direction         |
-| ถนน                         | Road, street                  |
-| เลย                         | Completely, totally, beyond   |
-| แวะ                         | Stop by, drop in              |
-| พา                          | Take (someone somewhere)      |
-| เพื่อน                       | Friend                        |
-| เที่ยว                       | Travel, go out, tour          |
-| เล่น                         | Play                          |
-| ดีใจ                         | Happy, glad                   |
-| พวกเธอ                      | You all (female group)        |
-| เธอ                         | You, she (informal)           |
-| ขอให้                        | Wish, hope for                |
-| ทำตัว                        | Behave, act                   |
-| ทำตัวให้สบาย                 | Make yourself comfortable     |
-| เหมือน                       | Like, similar to              |
-| จำ                          | Remember                      |
-| เคย                         | Used to, have ever            |
-| หน                          | Time, occasion                |
-| สบายดี                      | Feeling good, well            |
-| รู้สึก                       | Feel                         |
-| สมบูรณ์                     | Complete, perfect             |
-| แข็งแรง                     | Strong, healthy               |
-| เพื่อนร่วมชั้น               | Classmate                     |
-| นั่ง                         | Sit                           |
-| ดื่ม                         | Drink                         |
-| ชา                          | Tea                           |
-| ร้อน                        | Hot                           |
-| เย็น                        | Cold                          |
-| เย็นสบาย                    | Cool and comfortable          |
-| ใจเย็นๆ                      | Calm down, take it easy       |
-| ว่า                          | That, say                     |
-| ลำบาก                       | Difficult, troublesome        |
-| คุย                         | Chat, talk                    |
-| เกรง                         | Be afraid, fear               |
-| เกรงใจ                      | Considerate, feel uneasy (politeness) |
-| สนิท                        | Close, intimate (relationship) |
-| หวัง                         | Hope, expect                  |
-| เพื่อนที่ดี                   | Good friend                   |
-| ต่อไป                        | Next, from now on            |
-| การฟัง                       | Listening                     |
-| การพูด                       | Speaking                      |
-| การเขียน                     | Writing                       |
-| การค้าระหว่างประเทศ         | International trade           |
-| การแปล                      | Translation                   |
-| การทหาร                     | Military affairs              |
-| การต่างประเทศ               | Foreign affairs               |
-| ความสวย                     | Beauty                        |
-| ความจริง                    | Truth                         |
-| ความดี                       | Goodness                      |
-| ความสูง                     | Height                        |
-| ความเร็ว                    | Speed                         |
-| ความเห็น                    | Opinion                       |
-| ความคิด                     | Thought, idea                 |
-| ความรู้                      | Knowledge                     |
-| กว่า                        | More than, comparative        |
-| คุณสวยกว่าเขา               | You are more beautiful than her |
-| อ้วน                        | Fat, chubby                   |
-| ผอม                        | Thin, slim                    |
-| ผ้า                         | Cloth, fabric                 |
-| ผืน                         | Piece (classifier for cloth, fabric) |
-| กระดาษ                      | Paper                         |
-| หนัก                        | Heavy                         |
-| ฝนตกหนัก                    | Heavy rain                    |
-| เป็นเกียรติ                  | An honor, honored             |
-| ตรงเวลา                     | Punctual, on time             |
-| เร็วๆ                        | Quickly, soon                 |
-| ตอบจดหมาย                  | Reply to a letter             |
+| **Thai**                                                       | **English Translation**                                                      |
+|----------------------------------------------------------------|------------------------------------------------------------------------------|
+| เขามีแฟนหลายคน                                               | He has many partners.                                                        |
+| หลายคนอยากรู้ว่าเขามีแฟนหรือยัง                                  | Many people want to know if he has a partner yet.                            |
+| หลายสิบ                                                       | Many tens (dozens)                                                           |
+| หลายร้อย                                                      | Many hundreds                                                                |
+| หลายพัน                                                       | Many thousands                                                               |
+| อย่าง                                                          | Like / In a manner                                                           |
+| หลายอย่าง                                                     | Various things                                                               |
+| ช่วย                                                          | Help                                                                         |
+| ช่วยซื้อส้มตำให้หนูด้วย                                        | Please help buy som tam for me.                                              |
+| ช่วยให้หนูด้วย                                                | Please help me too.                                                          |
+| ช่วยซื้อให้ผมด้วย                                              | Please help buy it for me.                                                   |
+| ถึงบ้านแล้วบอกด้วยนะ                                           | When you get home, please let me know.                                       |
+| พรุ่งนี้เขาจะไปด้วย                                             | Tomorrow, he will go along (with us).                                        |
+| เมื่อวานผมเห็นเขา 2 คนกินข้าวด้วยกัน                             | Yesterday, I saw two of them eating rice together.                         |
+| ก๋วยเตี๋ยวดูน่ากิน                                              | The noodles look appetizing.                                                 |
+| ยิ้มคุณตูสวยมาก                                               | Your (Tuu's) smile is very beautiful.                                        |
+| น่า                                                            | (Prefix indicating “worthy of” or “appealing to”)                            |
+| น่ากลัว                                                        | Scary                                                                        |
+| น่าไป                                                          | Worth going                                                                  |
+| น่าฟัง                                                         | Worth listening to                                                           |
+| น่าสนใจ                                                        | Interesting                                                                  |
+| น่าซื้อ                                                        | Worth buying                                                                 |
+| น่าเชื่อ                                                       | Believable                                                                   |
+| กรุงเทพฯน่าเที่ยวไหม                                             | Is Bangkok worth visiting?                                                   |
+| หนังเรื่องนี้น่าดูนะ ไบดูเถอะ                                     | This movie is worth watching; go watch it.                                   |
+| เด็กคนนี้น่ารักมาก                                              | This child is very cute.                                                     |
+| น่าจะ                                                          | Probably (should)                                                            |
+| เขาน่าจะรู้แล้ว                                                 | He probably already knows.                                                   |
+| เขาน่าจะรู้แล้วว่าคุณพูดภาษาไทยได้                               | He probably already knows that you can speak Thai.                           |
+| น่าจะไม่                                                        | Probably not                                                                 |
+| ไม่น่าจะ                                                        | Probably not (less likely)                                                   |
+| อาหารร้านนี้น่าจะไม่อร่อย                                       | The food at this restaurant is probably not delicious.                     |
+| อาหารร้านนี้ไม่น่าจะอร่อย                                        | The food at this restaurant probably isn't delicious.                      |
+| ยํา                                                             | Yum (spicy Thai salad)                                                       |
+| ตะไคร้                                                         | Lemongrass                                                                   |
+| ยำตะไคร้                                                       | Yum with lemongrass                                                          |
+| ยำวุ้นเส้น                                                     | Yum with glass noodles                                                         |
+| นะ                                                             | (Sentence particle, softens tone: "okay", "please")                         |
+| แล้ว                                                           | Already                                                                      |
+| หรือยัง                                                        | Or not yet?                                                                  |
+| ยัง                                                            | Still / Yet                                                                  |
+| กินข้าวแล้วหรือยัง                                              | Have you eaten yet?                                                          |
+| เขากลับบ้านแล้ว                                                 | He has returned home.                                                        |
+| ต้มยำกุ้งขายหมดแล้ว                                              | The tom yum goong has sold out already.                                      |
+| เข้าใจหรือยัง                                                   | Do you understand yet?                                                       |
+| เข้าใจแล้ว                                                      | I understand now.                                                            |
+| ยังไม่เข้าใจ                                                    | I still don't understand.                                                    |
+| อาจารย์มาแล้วหรือยัง                                             | Has the teacher arrived yet?                                                 |
