--- a/测试.md
+++ b/测试.md
@@ -1,50 +1,37 @@
-| **Thai**                                                       | **English Translation**                                                      |
-|----------------------------------------------------------------|------------------------------------------------------------------------------|
-| เขามีแฟนหลายคน                                               | He has many partners.                                                        |
-| หลายคนอยากรู้ว่าเขามีแฟนหรือยัง                                  | Many people want to know if he has a partner yet.                            |
-| หลายสิบ                                                       | Many tens (dozens)                                                           |
-| หลายร้อย                                                      | Many hundreds                                                                |
-| หลายพัน                                                       | Many thousands                                                               |
-| อย่าง                                                          | Like / In a manner                                                           |
-| หลายอย่าง                                                     | Various things                                                               |
-| ช่วย                                                          | Help                                                                         |
-| ช่วยซื้อส้มตำให้หนูด้วย                                        | Please help buy som tam for me.                                              |
-| ช่วยให้หนูด้วย                                                | Please help me too.                                                          |
-| ช่วยซื้อให้ผมด้วย                                              | Please help buy it for me.                                                   |
-| ถึงบ้านแล้วบอกด้วยนะ                                           | When you get home, please let me know.                                       |
-| พรุ่งนี้เขาจะไปด้วย                                             | Tomorrow, he will go along (with us).                                        |
-| เมื่อวานผมเห็นเขา 2 คนกินข้าวด้วยกัน                             | Yesterday, I saw two of them eating rice together.                         |
-| ก๋วยเตี๋ยวดูน่ากิน                                              | The noodles look appetizing.                                                 |
-| ยิ้มคุณตูสวยมาก                                               | Your (Tuu's) smile is very beautiful.                                        |
-| น่า                                                            | (Prefix indicating “worthy of” or “appealing to”)                            |
-| น่ากลัว                                                        | Scary                                                                        |
-| น่าไป                                                          | Worth going                                                                  |
-| น่าฟัง                                                         | Worth listening to                                                           |
-| น่าสนใจ                                                        | Interesting                                                                  |
-| น่าซื้อ                                                        | Worth buying                                                                 |
-| น่าเชื่อ                                                       | Believable                                                                   |
-| กรุงเทพฯน่าเที่ยวไหม                                             | Is Bangkok worth visiting?                                                   |
-| หนังเรื่องนี้น่าดูนะ ไบดูเถอะ                                     | This movie is worth watching; go watch it.                                   |
-| เด็กคนนี้น่ารักมาก                                              | This child is very cute.                                                     |
-| น่าจะ                                                          | Probably (should)                                                            |
-| เขาน่าจะรู้แล้ว                                                 | He probably already knows.                                                   |
-| เขาน่าจะรู้แล้วว่าคุณพูดภาษาไทยได้                               | He probably already knows that you can speak Thai.                           |
-| น่าจะไม่                                                        | Probably not                                                                 |
-| ไม่น่าจะ                                                        | Probably not (less likely)                                                   |
-| อาหารร้านนี้น่าจะไม่อร่อย                                       | The food at this restaurant is probably not delicious.                     |
-| อาหารร้านนี้ไม่น่าจะอร่อย                                        | The food at this restaurant probably isn't delicious.                      |
-| ยํา                                                             | Yum (spicy Thai salad)                                                       |
-| ตะไคร้                                                         | Lemongrass                                                                   |
-| ยำตะไคร้                                                       | Yum with lemongrass                                                          |
-| ยำวุ้นเส้น                                                     | Yum with glass noodles                                                         |
-| นะ                                                             | (Sentence particle, softens tone: "okay", "please")                         |
-| แล้ว                                                           | Already                                                                      |
-| หรือยัง                                                        | Or not yet?                                                                  |
-| ยัง                                                            | Still / Yet                                                                  |
-| กินข้าวแล้วหรือยัง                                              | Have you eaten yet?                                                          |
-| เขากลับบ้านแล้ว                                                 | He has returned home.                                                        |
-| ต้มยำกุ้งขายหมดแล้ว                                              | The tom yum goong has sold out already.                                      |
-| เข้าใจหรือยัง                                                   | Do you understand yet?                                                       |
-| เข้าใจแล้ว                                                      | I understand now.                                                            |
-| ยังไม่เข้าใจ                                                    | I still don't understand.                                                    |
-| อาจารย์มาแล้วหรือยัง                                             | Has the teacher arrived yet?                                                 |
+| **Thai**                                         | **English Translation**                                      |
+|--------------------------------------------------|--------------------------------------------------------------|
+| เขามีแฟนหลายคน                                  | He has many partners.                                        |
+| หลายคนอยากรู้ว่าเขามีแฟนหรือยัง                   | Many people want to know if he has a partner yet.            |
+| หลายสิบ                                         | Many tens (dozens)                                           |
+| หลายร้อย                                        | Many hundreds                                                |
+| หลายพัน                                         | Many thousands                                               |
+| อย่าง                                            | Like / In a manner                                           |
+| หลายอย่าง                                       | Various things                                               |
+| ช่วย                                            | Help                                                         |
+| ช่วยซื้อส้มตำให้หนูด้วย                         | Please help buy som tam for me.                              |
+| ช่วยทำการบ้านให้น้อง                           | Help do homework for (your) younger sibling.                 |
+| ช่วยทำงานบ้านให้แม่                             | Help do housework for mom.                                   |
+| ช่วยใครทำอะไร                                  | Help someone do something.                                   |
+| ช่วยแม่ทำงานบ้าน                              | Help mom do housework.                                       |
+| ถูก                                             | Correct / Right                                              |
+| ผิด                                             | Wrong / Incorrect                                            |
+| ถูกปากทุกอย่าง                                  | Everything is to my taste.                                   |
+| ถูกใจ                                           | Pleasing                                                     |
+| ปากการ้านี้ถูกใจผมทุกต้าม                         | This dish pleases my palate every time.                      |
+| ถูกคอกัน                                       | They are mutually compatible.                                |
+| ต้องเขียนให้ถูกทุกคำ                            | Must write every word correctly.                             |
+| ทุก                                             | Every / All                                                  |
+| ทุกวัน                                         | Every day                                                    |
+| ทุกคน                                          | Everyone                                                     |
+| ทุกเล่ม                                         | Every volume (every book)                                    |
+| สวัสดีทุกคน                                    | Hello everyone.                                              |
+| แม่ให้เงินผมทุก 3 เดือน                         | My mother gives me money every 3 months.                     |
+| นักศึกษาชอบดูหนังเรื่องนี้ทุกคน                 | Every student likes watching this movie.                     |
+| อาหารถูกปากทุกอย่าง                             | Every food is to my taste.                                   |
+| อาหารทุกอย่างถูกปาก                             | All food is delicious.                                       |
+| อาจารย์กรุณาอธิบายอีกครั้งได้ไหมครับ             | Teacher, could you please explain it again?                  |
+| กรุณาเปิดประตูให้ผมด้วย                         | Please open the door for me as well.                         |
+| กรุณาตอบกลับอีเมล์นี้ด้วย                        | Please reply to this email as well.                          |
+| กรุณาถอดรองเท้า                                | Please take off your shoes.                                  |
+| กรุณาอย่าส่งเสียงดัง                            | Please do not make loud noises.                              |
+| อาหารขายหมดทุกอย่าง                             | All the food is sold out.                                    |
